k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  namespace: bookstore

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:

        - name: api-gateway

          image: bala0804/bookstore-api-gateway:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "300m"

          livenessProbe:
            httpGet:
              path: /
              port: 3000

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 3000

            initialDelaySeconds: 10
            periodSeconds: 5

---

apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: bookstore

spec:
  selector:
    app: api-gateway

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
