k8s/book-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: book-service
  namespace: bookstore

spec:
  replicas: 2

  selector:
    matchLabels:
      app: book-service

  template:
    metadata:
      labels:
        app: book-service

    spec:
      containers:

        - name: book-service

          image: bala0804/bookstore-book-service:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8001

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "200m"

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8001

            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8001

            initialDelaySeconds: 10
            periodSeconds: 5

---

apiVersion: v1
kind: Service

metadata:
  name: book-service
  namespace: bookstore

spec:
  selector:
    app: book-service

  ports:
    - port: 8001
      targetPort: 8001

  type: ClusterIP
