k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: bookstore
spec:
  replicas: 2

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service
          image: bala0804/bookstore-order-service:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: bookstore
spec:
  selector:
    app: order-service

  ports:
    - port: 8003
      targetPort: 8003

  type: ClusterIP
